@@ -1,5 +1,6 @@
 0.07
  - Rename example script to better name.
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.06 2021-02-05T12:20:42+01:00
